Adjustments to support Java version above Java 8